--- a/ClassificationAndClustering/notebooks/ClusterAnalysis.ipynb
+++ b/ClassificationAndClustering/notebooks/ClusterAnalysis.ipynb
@@ -25,7 +25,6 @@
     "from sklearn.cluster import KMeans\n",
     "from sklearn.metrics import silhouette_samples, silhouette_score\n",
     "from sklearn.cluster import DBSCAN\n",
-    "from sklearn import metrics\n",
     "from sklearn.preprocessing import StandardScaler\n",
     "\n",
     "plt.style.use('seaborn')"
@@ -566,7 +565,7 @@
     "    print('Estimated number of clusters: %d' % n_clusters_)\n",
     "    print('Estimated number of noise points: %d' % n_noise_)\n",
     "    print(\"Silhouette Coefficient: %0.3f\"\n",
-    "          % metrics.silhouette_score(X, labels))\n",
+    "          % silhouette_score(X, labels))\n",
     "\n",
     "    # Plot result\n",
     "    import matplotlib.pyplot as plt\n",
